# aoc-2022

./: CMakeLists.txt  README.md
src/: 12b.c  1a.c  1b.c  2a.c  2b.c  3a.c  3b.c  4a.c  4b.c  5a.c  5b.c  6a.c  6b.c  7a.c  7b.c
