cmake_minimum_required(VERSION 3.21)
project("Advent of Code 2022" VERSION 1.0 DESCRIPTION "My solutions for Advent of Code 2022" LANGUAGES C)
set_directory_properties(PROPERTIES C_STANDARD 11 C_EXTENSIONS OFF)
set(CMAKE_C_FLAGS "-Wall -Wextra -Wpedantic -Wuninitialized -Wundef -Wcast-align -Wstrict-overflow=2 -Wwrite-strings -Wno-format-nonliteral")
add_executable(1a src/1a.c)
add_executable(1b src/1b.c)
add_executable(2a src/2a.c)
add_executable(2b src/2b.c)
add_executable(3a src/3a.c)
add_executable(3b src/3b.c)
add_executable(4a src/4a.c)
add_executable(4b src/4b.c)
add_executable(5a src/5a.c)
add_executable(5b src/5b.c)
add_executable(6a src/6a.c)
add_executable(6b src/6b.c)
add_executable(7a src/7a.c)
add_executable(7b src/7b.c)
add_executable(8a src/8a.c)
add_executable(8b src/8b.c)
add_executable(9a src/9a.c)
add_executable(9b src/9b.c)
add_executable(10a src/10a.c)
add_executable(10b src/10b.c)
add_executable(11a src/11a.c)
add_executable(11b src/11b.c)
add_executable(12a src/12a.c)
add_executable(12b src/12b.c)
add_executable(13a src/13a.c)
add_executable(13b src/13b.c)
add_executable(14a src/14a.c)
add_executable(14b src/14b.c)
add_executable(15a src/15a.c)
add_executable(15b src/15b.c)
add_executable(16a src/16a.c)
add_executable(16b src/16b.c)
add_executable(17a src/17a.c)
add_executable(17b src/17b.c)
add_executable(18a src/18a.c)
add_executable(18b src/18b.c)
add_executable(19a src/19a.c)
add_executable(19b src/19b.c)
add_executable(20a src/20a.c)
add_executable(20b src/20b.c)
add_executable(21a src/21a.c)
add_executable(21b src/21b.c)
add_executable(22a src/22a.c)
add_executable(22b src/22b.c)
add_executable(23a src/23a.c)
add_executable(23b src/23b.c)
add_executable(24a src/24a.c)
add_executable(24b src/24b.c)
add_executable(25a src/25a.c)
add_executable(25b src/25b.c)
